[package]
name = "relay_server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
log = "0.4.20"
paris = { version = "1.5", features = ["macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "1.4", features = [
	"serde",
	"v4",
	"fast-rng",
	"macro-diagnostics",
] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = [] }
serde_json = { version = "1.0.108", features = [] }
derive_more = "0.99"
scc = "2.0.7"
